# ricom

./: Cargo.toml  NOTICE  README.md  build.rs  ricom.toml.example  stamp
crates/backend/: Cargo.toml
crates/backend-factory/: Cargo.toml
crates/backend-factory/src/: lib.rs
crates/backend-gl/: Cargo.toml
crates/backend-gl/src/: glyphs.rs  lib.rs  text.rs
crates/backend-xrender/: Cargo.toml
crates/backend-xrender/src/: lib.rs  tests.rs  text.rs
crates/backend/src/: lib.rs  tests.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  tests.rs
crates/config/tests/: roundtrip_composed.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs  tests.rs
crates/region/: Cargo.toml
crates/region/src/: lib.rs  tests.rs
crates/ricomctl/: Cargo.toml
crates/ricomctl/src/: main.rs  tests.rs
crates/session/: Cargo.toml
crates/session/src/: hotkey.rs  lib.rs  tests.rs
crates/session/src/hotkey/: tests.rs
crates/wm/: Cargo.toml
crates/wm/src/: anim.rs  lib.rs  tests.rs
crates/wm/src/anim/: tests.rs
crates/xconn/: Cargo.toml
crates/xconn/src/: lib.rs
screenshots/: README.md
src/: main.rs
tools/gen-sdf-atlas/: Cargo.toml
tools/gen-sdf-atlas/src/: main.rs
