[package]
name = "ricom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
backend-gl = { version = "0.1.0", path = "crates/backend-gl" }
config = { version = "0.1.0", path = "crates/config" }
session = { version = "0.1.0", path = "crates/session" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xconn = { version = "0.1.0", path = "crates/xconn" }

[workspace]
resolver = "2"
members = ["crates/session", "crates/xconn", "crates/region", "crates/wm", "crates/backend-gl", "crates/config", "crates/proto", "crates/ricomctl"]
# Dev-only atlas generator — kept out of the runtime build graph.
exclude = ["tools/gen-sdf-atlas"]
