[package]
name = "backend-xrender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
tracing = "0.1.44"
# Pure x11rb — no EGL/GL/Xlib. RENDER + XFIXES come from `all-extensions`.
x11rb = { version = "0.13.2", features = ["all-extensions"] }
region = { version = "0.1.0", path = "../region" }
backend = { version = "0.1.0", path = "../backend" }
