[package]
name = "session"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
calloop = "0.14.4"
region = { version = "0.1.0", path = "../region" }
tracing = "0.1.44"
x11rb = { version = "0.13.2", features = ["all-extensions"] }
xconn = { version = "0.1.0", path = "../xconn" }
wm = { version = "0.1.0", path = "../wm" }
backend-gl = { version = "0.1.0", path = "../backend-gl" }
